* Changelog

** [[https://github.com/hzhangxyz/TAT/compare/v0.2.17...dev][Unreleased]]

*** Added
+ *tetragono*: Add compatibility support for python3.8.
+ *tetragono*: Add the multiple product state, which is the supertype of the string bond state.
*** Changed
*** Deprecated
*** Removed
*** Fixed

** [[https://github.com/hzhangxyz/TAT/compare/v0.2.13...v0.2.17][v0.2.17]] - 2022-06-12

*** Added
+ *tetragono*: Add support for changing the hamiltonian of an existent sampling lattice.
  To do it, create a lattice with target hamiltonians and then call =gm_data_load(file_name)=
  to replace tensors with data stored in file =file_name=. For low-level API,
  =lattice_1._lattice = lattice_2._lattice= could replace tensor data directly.
+ *PyTAT*: Add edge fusing support when contracting two tensors.
+ *TAT.hpp*: Add support for being compiled by MSVC or Intel ICC.
*** Changed
+ *tetragono*: Avoid data files being destroyed if a file system error appears when saving,
  such as the size limit of quota reached.
*** Removed
+ *tetragono*: Submodule =common_variable= is removed, please use =common_tensor= or =common_toolkit= instead.
*** Fixed
+ *TAT.hpp*: Fix selecting the wrong constructor of =Edge= when using two vector iterators to construct =Edge=.
+ *TAT.hpp*: Fix bug when tensor SVD with relative cut cutting nothing.

** [[https://github.com/hzhangxyz/TAT/compare/v0.2.12...v0.2.13][v0.2.13]] - 2022-04-26

*** Added
+ *tetragono*: Allow passing function directly instead of module name string of various interface of mid-level API,
  including =restrict= for restricting subspace, =measurement= for measuring values, =initial_configuration=
  for initializing sampling configurations, and =hopping_hamiltonians= for fake hamiltonians used by sweep sampling.
+ *tetragono*: Add =load_configuration= to load configuration from a saved file to a =Configuration= object
  for low-level API.
+ *tetragono*: Add classical term of energy for sampling lattice. To do it,